<resources>
    <string name="app_name">Podium Techinal Challenge</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="a11y_rating_icon">Rating Icon</string>
    <string name="a11y_sort_asc_icon">Sort ascending Icon</string>
    <string name="a11y_sort_desc_icon">Sort descending Icon</string>

    <!-- Home Screen -->
    <string name="home_top_movies">Top Movies</string>
    <string name="home_browse_by_genre">Browse by Genre</string>
    <string name="home_view_all">VIEW ALL MOVIES</string>

    <!-- Movies Screen -->
    <string name="movies_genre_movies">%1$s movies</string>
    <string name="movies_all_movies">All movies</string>
    <string name="movies_ordered_by">ordered by</string>

    <!-- Movies Sort/Filter Screen -->
    <string name="movies_browse_by">Browse by</string>
    <string name="movies_sort_by">Sort by</string>
    <string name="movies_sort_by_title">Title</string>
    <string name="movies_sort_by_rating">Rating</string>
    <string name="movies_sort_by_popularity">Popularity</string>

    <!-- Movie Screen -->
    <string name="movies_runtime_year">%1$d min | %2$s</string>
    <string name="movie_genres">Genres</string>
    <string name="movie_cast">Cast</string>
    <string name="movie_directed_by">Directed by</string>

    <!-- General -->
    <string name="genre_all">All</string>
    <string name="try_again">Try Again</string>
    <string name="error_loading">Error loading the data.</string>
    <string name="error_loading_image">image request failed.</string>
</resources>