...
private fun TopMoviesRow(
    movies: List<MovieEntity>,
    isLoading: Boolean,
    onMovieClicked: (movieId: Int) -> Unit
) {
    LazyRow(
        modifier = Modifier.testTag("top_movies_row"),
        horizontalArrangement = Arrangement.spacedBy(HalfPadding),
        contentPadding = PaddingValues(HalfPadding),
    ) {
        if (isLoading) {
            items(5) {
                MovieItemPlaceHolder()
...
        8.3f,
        null
    )

    val viewState = MoviesViewState(
        movies = listOf(movie, movie, movie, movie, movie),
        genres = listOf("Action", "Adventure", "Animation", "Comedy", "Crime")
    )

    MyTheme {
        HomeScreen(viewState = viewState) {}
    }
}
...
