...
    showViewAllButton: Boolean,
    showAllGenre: Boolean,
    onGenreClicked: (genre: String?) -> Unit,
    onViewAllClicked: (() -> Unit)? = null
) {
    FlowRow(
        modifier = modifier.testTag("genres_list"),
        mainAxisSize = SizeMode.Expand,
        crossAxisSpacing = 0.dp,
        mainAxisSpacing = 8.dp
    ) {
        if (isLoading) {
            repeat(6) {
...
